--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -17,12 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Italian\n"
+     ]
+    }
+   ],
+   "source": [
+    "food=\"Italian\"\n",
+    "print(food)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,12 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "restaurant=\"Mio Posto\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,12 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm going to Mio Posto for some Italian\n"
+     ]
+    }
+   ],
+   "source": [
+    "message=\"I'm going to \"+restaurant+\" for some \"+food\n",
+    "print(message)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,12 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "num_friends=4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,12 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm going with 4 friends\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I'm going with \"+str(num_friends)+\" friends\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,12 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "meal_price=15.5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,12 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.498749999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "meal_price=meal_price*1.15\n",
+    "print(meal_price)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,12 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102.49374999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_cost=meal_price*(num_friends+1)\n",
+    "print(total_cost)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,12 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "budget=100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,12 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_friends=int(budget/meal_price)\n",
+    "print(max_friends)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,12 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FOOD time! \n",
+      "FOOD time! \n",
+      "FOOD time! \n",
+      "FOOD time! \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chorus=\"FOOD time! \\n\"*max_friends\n",
+    "print(chorus)"
+   ]
   },
   {
    "cell_type": "markdown",
